force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Batch_Id__c</fullName>
    <description>This field contains the batch ID if the error occurred in a batch.</description>
    <label>Batch Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>