force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Class_Name__c</fullName>
    <description>This field contains the class name where the error occurred.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>