force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Error_Message__c</fullName>
    <description>This field contains the description of the error.</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>