force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Error_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Error_Status_Code__c</fullName>
    <description>This field contains the error code.</description>
    <label>Error Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>