force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Error_Type__c</fullName>
    <description>This field contains the error type. The type can be: Generic, SOQL, Permission, or Custom.</description>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
            <value>
                <fullName>Permission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>