force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Fields__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Fields__c</fullName>
    <description>Stores the fields of an object because of which the error originated.</description>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>