force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Line_number__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Line_number__c</fullName>
    <description>This field contains the line number of the class where error originated.</description>
    <label>Line number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>