force-app/main/default/objects/smagicinteract__Error_Log__c/fields/smagicinteract__Object__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object__c</fullName>
    <description>This field contains the object on which the error occurred.</description>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>