force-app/main/default/objects/smagicinteract__Error_Log__c/listViews/smagicinteract__All.listView-meta.xml
<ListView>
    <fullName>smagicinteract__All</fullName>
    <columns>NAME</columns>
    <columns>smagicinteract__Class_Name__c</columns>
    <columns>smagicinteract__Error_Message__c</columns>
    <columns>smagicinteract__Error_Type__c</columns>
    <columns>smagicinteract__Fields__c</columns>
    <columns>smagicinteract__Line_number__c</columns>
    <columns>smagicinteract__Object__c</columns>
    <columns>smagicinteract__Batch_Id__c</columns>
    <columns>smagicinteract__Error_Status_Code__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>